<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="et_search_hint">Enter Search Term</string>
    <string name="bt_search">Search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="bt_load_more_images">Load More Images</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="tv_settings_advance_label">Advanced Search Options</string>
    <string name="tv_settings_image_size">Image Size</string>
    <string name="et_settings_advance_hint">small</string>
    <string name="tv_settings_color_filter">Color Filter</string>
    <string name="et_settings_color_hint">blue</string>
    <string name="tv_settings_image_type">Image Type</string>
    <string name="et_settings_image_type_hint">faces</string>
    <string name="tv_settings_site_filter">Site Filter</string>
    <string name="et_settings_site_hint">yahoo.com</string>
    <string name="bt_settings_save">Save</string>
    <string name="settings_label">settings</string>
</resources>
