<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_search"
        android:hint="@string/et_search_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:ems="10">
        <requestFocus/>
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_search"
        android:id="@+id/btSearch"
        android:layout_alignParentTop="true"
        android:onClick="onImageSearch"
        android:layout_alignParentRight="true" />

    <GridView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gvSearchImages"
        android:layout_below="@+id/btSearch"
        android:layout_alignParentLeft="true"
        android:numColumns="3"
        android:layout_above="@+id/btLoadMoreImages"
        />

    <Button
        android:id="@+id/btLoadMoreImages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/bt_load_more_images"
        android:layout_centerHorizontal="true" 
        android:onClick="onLoadMoreImages"
        />

</RelativeLayout>